libroot: Return EBADF if a negative FD is specified to fdopendir.

And do some minor code cleanups.

Fixes #19060.